@@ -240,6 +240,16 @@ sub generateData
             'filetype' => "ranking",
             'rows' => 30,
             'hdfs' => "singlefile/prerank",
+        }, {
+            'name' => "utf8Voter",
+            'filetype' => "utf8Voter",
+            'rows' => 30,
+            'hdfs' => "utf8Data/选民/utf8Voter",
+        }, {
+            'name' => "utf8Student",
+            'filetype' => "utf8Student",
+            'rows' => 300,
+            'hdfs' => "utf8Data/学生/utf8Student",
         }
     );
 
